# groonga-word2vec

./: .gitignore  Makefile.am  README.md  configure.ac
glove/: .glove_shuffle.c.swp  Makefile.am  glove.c  glove_cooccur.c  glove_shuffle.c  glove_vocab_count.c
test/: run-test.sh
test/suite/: query_expander_word2vec_empty.expected  query_expander_word2vec_empty.test  word2vec_analogy_empty.expected  word2vec_analogy_empty.test  word2vec_distace_empty.expected  word2vec_distace_empty.test  word2vec_distance_with_normalizer.expected  word2vec_distance_with_normalizer.test  word2vec_load_empty.expected  word2vec_load_empty.test  word2vec_train_empty.expected  word2vec_train_empty.test  word2vec_train_for_tag.expected  word2vec_train_for_tag.test  word2vec_train_from_input_file.expected  word2vec_train_from_input_file.test  word2vec_train_with_inuput_and_mecab.expected  word2vec_train_with_inuput_and_mecab.test  word2vec_unload_empty.expected  word2vec_unload_empty.test
test/suite/dump_to_train_file/: alpha.expected  alpha.test  default.expected  default.test  filter.expected  filter.test  filter_with_int.expected  filter_with_int.test  input_filter.expected  input_filter.test  k_means.expected  k_means.test  label.expected  label.test  label_ref.expected  label_ref.test  label_ref_vec.expected  label_ref_vec.test  label_vec.expected  label_vec.test  mecab.expected  mecab.test  multi_model.expected  multi_model.test  normalizer_none.expected  normalizer_none.test  one_char.expected  one_char.test  phrase.expected  phrase.test  phrase_and_label.expected  phrase_and_label.test  repeat.expected  repeat.test  sentence_vectors.expected  sentence_vectors.test  symbol.expected  symbol.test
test/suite/glove_train/: min_count.actual  min_count.test
test/suite/query_expander/: default.expected  default.test
test/suite/word2vec_distance/: cache.expected  cache.test  default.expected  default.test  edit_distance.expected  edit_distance.test  expander_mode.expected  expander_mode.test  is_phrase.expected  is_phrase.test  limit.expected  limit.test  minus.expected  minus.test  n_sort.expected  n_sort.test  n_sort_all.expected  n_sort_all.test  no_word.expected  no_word.test  normalizer_none.expected  normalizer_none.test  offset.expected  offset.test  output_filter.expected  output_filter.test  pca.expected  pca.test  pca_centered.expected  pca_centered.test  pca_with_offset_limit.expected  pca_with_offset_limit.test  pca_with_over_insertion_threshold.expected  pca_with_over_insertion_threshold.test  plus.expected  plus.test  plus_pos.expected  plus_pos.test  prefix_filter.expected  prefix_filter.test  (+18 more)
test/suite/word2vec_load/: default.actual  default.expected  default.test  text.expected  text.test
test/suite/word2vec_train/: alpha.expected  alpha.test  default.expected  default.test  filter.expected  filter.test  filter_with_int.expected  filter_with_int.test  input_add_prefix.expected  input_add_prefix.test  input_add_prefix_ref.expected  input_add_prefix_ref.test  input_add_prefix_ref_vec.expected  input_add_prefix_ref_vec.test  input_add_prefix_second.expected  input_add_prefix_second.test  input_add_prefix_second_ref.expected  input_add_prefix_second_ref.test  input_add_prefix_second_ref_vec.expected  input_add_prefix_second_ref_vec.test  input_add_prefix_vec.expected  input_add_prefix_vec.test  input_filter.expected  input_filter.test  k_means.expected  k_means.test  label.expected  label.test  label_ref.expected  label_ref.test  label_ref_vec.expected  label_ref_vec.test  label_vec.expected  label_vec.test  mecab.expected  mecab.test  min_count.expected  min_count.test  multi_model.expected  multi_model.test  (+12 more)
word2vec/: .word2vec.cpp.swp  Makefile.am  word2vec.cpp
